syntax = "proto3";
package dydxprotocol.feetiers;

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/feetiers/types";

import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "dydxprotocol/feetiers/params.proto";
import "dydxprotocol/feetiers/fee_discount_campaign.proto";
import "gogoproto/gogo.proto";

// Msg defines the Msg service.
service Msg {
  // UpdatePerpetualFeeParams updates the PerpetualFeeParams in state.
  rpc UpdatePerpetualFeeParams(MsgUpdatePerpetualFeeParams)
      returns (MsgUpdatePerpetualFeeParamsResponse);

  // SetFeeDiscountCampaignParams sets or updates fee discount campaigns for
  // specific CLOB pairs.
  rpc SetFeeDiscountCampaignParams(MsgSetFeeDiscountCampaignParams)
      returns (MsgSetFeeDiscountCampaignParamsResponse);
}

// MsgUpdatePerpetualFeeParams is the Msg/UpdatePerpetualFeeParams request type.
message MsgUpdatePerpetualFeeParams {
  // The address that controls the module.
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // Defines the parameters to update. All parameters must be supplied.
  PerpetualFeeParams params = 2 [ (gogoproto.nullable) = false ];
}

// MsgUpdatePerpetualFeeParamsResponse is the Msg/UpdatePerpetualFeeParams
// response type.
message MsgUpdatePerpetualFeeParamsResponse {}

// MsgSetFeeDiscountCampaignParams is the Msg/SetFeeDiscountCampaignParams
// request type.
message MsgSetFeeDiscountCampaignParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address that controls the module
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // The fee discount campaigns to create or update
  repeated FeeDiscountCampaignParams params = 2
      [ (gogoproto.nullable) = false ];
}

// MsgSetFeeDiscountCampaignParamsResponse is the
// Msg/SetFeeDiscountCampaignParams response type.
message MsgSetFeeDiscountCampaignParamsResponse {}